--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 .prettierignore
+
+temp/
+node_modules/
+.parcel-cache/
+dist/
