--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "parcel build",
     "dev": "parcel src/index.html",
-    "start": "parcel serve",
+    "start": "live-server dist",
     "format": "prettier --write \"src/**/*.{html,css,js,ts,json}\""
   },
   "repository": {
@@ -41,6 +41,7 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "live-server": "^1.2.2",
     "parcel": "^2.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
